--- a/package.json
+++ b/package.json
@@ -1,40 +1,26 @@
 {
-  "private": true,
-  "name": "my-app",
-  "version": "1.0.0",
-  "description": "npm init template for bootstrapping an empty Colyseus project",
-  "main": "build/index.js",
-  "engines": {
-    "node": ">= 20.9.0"
-  },
-  "scripts": {
-    "start": "tsx watch src/index.ts",
-    "loadtest": "tsx loadtest/example.ts --room my_room --numClients 2",
-    "build": "npm run clean && tsc",
-    "clean": "rimraf build",
-    "test": "mocha -r tsx test/**_test.ts --exit --timeout 15000"
-  },
-  "author": "",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/colyseus/create-colyseus/issues"
-  },
-  "homepage": "https://github.com/colyseus/create-colyseus#readme",
-  "devDependencies": {
-    "@colyseus/loadtest": "^0.16.0",
-    "@colyseus/testing": "^0.16.0",
-    "@types/express": "^4.17.1",
-    "@types/mocha": "^10.0.1",
-    "mocha": "^10.2.0",
-    "rimraf": "^5.0.0",
-    "tsx": "^4.10.2",
-    "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "@colyseus/monitor": "^0.16.0",
-    "@colyseus/playground": "^0.16.0",
-    "@colyseus/tools": "^0.16.0",
-    "colyseus": "^0.16.0",
-    "express": "^4.18.2"
-  }
+    "name": "mul",
+    "version": "1.0.0",
+    "main": "index.js",
+    "workspaces": [
+        "server",
+        "client",
+        "minigame"
+    ],
+    "scripts": {
+        "start:server": "npm --workspace server run start",
+        "build:server": "npm --workspace server run build",
+        "start:client": "npm --workspace client run start",
+        "build:client": "npm --workspace client run build",
+        "watch:client": "npm --workspace client run build -- --watch",
+        "start:game": "npm --workspace minigame run dev",
+        "start:all": "npm run build:client && concurrently \"npm run start:server\" \"npm run start:client\" \"npm run watch:client\" \"npm run start:game\""
+    },
+    "author": "",
+    "license": "ISC",
+    "keywords": [],
+    "description": "",
+    "devDependencies": {
+        "concurrently": "^9.1.2"
+    }
 }
